Modelos y FedAvg prácticamente listo

--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-jupyter = "*"
+pytorch-lightning = "*"
+notebook = "*"
+pytest = "*"
 
 [dev-packages]
 
