--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
-name: 💡 federated_learning_p2p Feature request
-description: Submit a proposal/request for a new federated_learning_p2p feature
+name: 💡 Feature request
+description: Submit a proposal/request for a new feature for the repo.
 title: "[FUTURE] <title>"
 labels: [New]
 body:
