Initial GRPC commit - still lots of things to do

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-torch==1.11.0
-pytorch-lightning==1.6.5
-torchmetrics==0.7.3
 pytest
 pytest-cov
-torchvision
 sphinx
 myst-parser
 furo
-pycryptodome
 black
+grpcio
+grpcio-tools
