--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytorch-lightning = "*"
+pytorch-lightning = "==1.6.5"
 notebook = "*"
 pytest = "*"
 pytest-cov = "*"
-torchvision = "*"
+torchvision = "==0.12.0"
 sphinx = "*"
 myst-parser = "*"
 furo = "*"
 pycryptodome = "*"
 black = "*"
+torch = "==1.11.0"
+torchmetrics = "==0.7.3"
 
 [dev-packages]
 torch-tb-profiler = "*"
