--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pytest
-pytest-cov
-sphinx
-myst-parser
-furo
-black
-grpcio
-grpcio-tools
+pytorch-lightning = "==1.6.5"
+torchvision = "==0.12.0"
+pytest = "*"
+pytest-cov = "*"
+sphinx = "*"
+myst-parser = "*"
+furo = "*"
+black = "*"
+torch = "==1.11.0"
+torchmetrics = "==0.7.3"
