--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pytorch-lightning = "==1.6.5"
-torchvision = "==0.12.0"
-pytest = "*"
-pytest-cov = "*"
-sphinx = "*"
-myst-parser = "*"
-furo = "*"
-black = "*"
-torch = "==1.11.0"
-torchmetrics = "==0.7.3"
+pytorch-lightning==1.6.5
+torchmetrics==0.7.3
+torchvision==0.12.0
+torch==1.11.0
+pytest
+pytest-cov
+sphinx
+myst-parser
+furo
+black
