--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pytorch-lightning
+pytorch-lightning==1.7.0
+torch==1.11.0
 pytest
 pytest-cov
-torchvision
-sphinx
+torchvision==0.12.0
+torchmetrics==0.7.3
+sphinx==6.2.1
 myst-parser
 furo
 pycryptodome
