--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,17 @@ keywords = ["federated learning", "fl", "peer to peer", "p2p", "decentralized", 
 
 [tool.poetry.dependencies]
 python = "^3.9"
-torch = { version = "1.11.0", optional = false }            # set to true when multiple frameworks are supported
-torchvision = { version = "0.12.0", optional = false }
-torchmetrics = { version = "0.7.3", optional = false }
-pytorch-lightning = { version = "1.6.5", optional = false }
+pytorch-lightning = "^1.2.1"
 flake8 = "^7.0.0"
 flake8-bugbear = "^24.2.6"
 mypy = "^1.8.0"
+grpcio = "^1.62.0"
+grpcio-tools = "^1.62.0"
+mypy-protobuf = "^3.5.0"
+types-protobuf = "^4.24.0.20240302"
+torch = "^2.2.1"
+torchvision = "^0.17.1"
+torchmetrics = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -36,3 +40,8 @@ build-backend = "poetry.core.masonry.api"
 
 #[tool.poetry.extras]
 #torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
+
+[tool.mypy]
+ignore_missing_imports = true
+strict = false
+plugins = "numpy.typing.mypy_plugin"
