--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ types-protobuf = "^4.24.0.20240302"
 torch = "^2.2.1"
 torchvision = "^0.17.1"
 torchmetrics = "^1.3.1"
+matplotlib = "^3.8.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
