--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,8 @@ keywords = ["federated learning", "fl", "peer to peer", "p2p", "decentralized", 
 [tool.poetry.dependencies]
 python = "^3.9"
 pytorch-lightning = "^1.2.1"
-flake8 = "^7.0.0"
-flake8-bugbear = "^24.2.6"
-mypy = "^1.8.0"
 grpcio = "^1.62.0"
 grpcio-tools = "^1.62.0"
-mypy-protobuf = "^3.5.0"
-types-protobuf = "^4.24.0.20240302"
 torch = "^2.2.1"
 torchvision = "^0.17.1"
 torchmetrics = "^1.3.1"
@@ -29,7 +24,10 @@ psutil = "^5.9.8"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
 pytest-cov = "^4.1.0"
-black = "^24.2.0"
+ruff = "^0.5.1"
+mypy = "^1.8.0"
+mypy-protobuf = "^3.5.0"
+types-protobuf = "^4.24.0.20240302"
 
 [tool.poetry.group.docs.dependencies]
 Sphinx = "^7.2.6"
@@ -39,6 +37,22 @@ furo = "^2024.1.29"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
 
 #[tool.poetry.extras]
 #torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
