--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,18 @@ keywords = ["federated learning", "fl", "peer to peer", "p2p", "decentralized", 
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pytorch-lightning = "^1.2.1"
 grpcio = "^1.62.0"
 grpcio-tools = "^1.62.0"
-torch = "^2.2.1"
-torchvision = "^0.17.1"
-torchmetrics = "^1.3.1"
 matplotlib = "^3.8.3"
 psutil = "^5.9.8"
+numpy = ">=1.20,<2.0"
+torch = {version = "^2.2.1", optional = true}
+pytorch-lightning = {version = "^1.2.1", optional = true}
+torchvision = {version = "^0.17.1", optional = true}
+torchmetrics = {version = "^1.3.1", optional = true}
+
+[tool.poetry.extras]
+torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
