--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ torch = {version = "^2.2.1", optional = true}
 pytorch-lightning = {version = "^1.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
+typer = "^0.12.3"
 
 [tool.poetry.extras]
 torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
