--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pytorch-lightning = {version = "^1.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
 typer = "^0.12.3"
+black = "^24.4.2"
+types-requests = "^2.32.0.20240712"
 
 [tool.poetry.extras]
 torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
@@ -32,7 +34,7 @@ pytest-cov = "^4.1.0"
 ruff = "^0.5.1"
 mypy = "^1.8.0"
 mypy-protobuf = "^3.5.0"
-types-protobuf = "^4.24.0.20240302"
+types-protobuf = "^5.27.0.20240626"
 
 [tool.poetry.group.docs.dependencies]
 Sphinx = "^7.2.6"
@@ -44,8 +46,8 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-line-length = 100
-exclude = ["p2pfl/communication/grpc/proto"]
+line-length = 120
+exclude = ["p2pfl/communication/grpc/proto", "docs"]
 
 [tool.ruff.lint]
 select = [
@@ -68,6 +70,7 @@ select = [
     # comprehensions
     "C4"
 ]
+fixable = ["E", "F", "W", "B", "SIM", "I", "C4"]
 ignore = ["B027", "D203", "D212"]
 
 #[tool.poetry.extras]
