fix: torch on gh action for type check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           pip install poetry
           python -m poetry lock --no-update
-          python -m poetry install
+          python -m poetry install -E torch
 
       - name: Format (ruff)
         run: |
