--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,16 @@
 name: CI
 
-on: [ push, pull_request ]
+on:
+  pull_request:
+  push:
 
 jobs:
   build:
+    name: Build and test
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: write
     steps:  
       - uses: actions/checkout@v4
       
@@ -32,6 +38,19 @@ jobs:
         run: |
           poetry run mypy -p p2pfl
 
-      - name: Test (pytest) # todo: coverage
+      - name: Test (pytest)
         run: |
-          poetry run pytest -v
+          poetry run pytest -v --cov=p2pfl
+
+      - name: Coverage comment
+        id: coverage_comment
+        uses: py-cov-action/python-coverage-comment-action@v3
+        with:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Store Pull Request comment to be posted
+        uses: actions/upload-artifact@v4
+        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+        with:
+          name: Coveragenator
+          path: python-coverage-comment-action.txt
