--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
-pytest-cov = "^4.1.0"
+pytest-cov = "^5.0.0"
 ruff = "^0.5.1"
 mypy = "^1.8.0"
 mypy-protobuf = "^3.5.0"
@@ -72,3 +72,10 @@ select = [
 ]
 fixable = ["E", "F", "W", "B", "SIM", "I", "C4"]
 ignore = ["B027", "D203", "D212"]
+
+# pyproject.toml
+[tool.pytest.ini_options]
+addopts = "-v --cov=p2pfl"
+
+[tool.coverage.run]
+relative_files = true
