--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ grpcio-tools = "^1.62.0"
 matplotlib = "^3.8.3"
 psutil = "^5.9.8"
 numpy = ">=1.20,<2.0"
+tensorflow = "^2.17.0"
+scikit-learn = "^1.5.1"
 torch = {version = "^2.2.1", optional = true}
 pytorch-lightning = {version = "^1.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
