--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,15 @@ MNIST/
 training_logs/
 logs
 
+# SSL
+*.key
+*.crt
+*.csr
+*.pem
+*.p12
+*.pfx
+*.cnf
+
 # Distribution / packaging
 .Python
 build/
