--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,12 @@ pytorch-lightning = {version = "^1.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
 typer = "^0.12.3"
+tensorflow = {version = "2.16.1", optional = true}
+scikit-learn = {version = "^1.5.1", optional = true}
 
 [tool.poetry.extras]
 torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
+tf = ["tensorflow", "scikit-learn"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
