--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytorch-lightning = {version = "^1.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
 typer = "^0.12.3"
+ray = "^2.34.0"
 
 [tool.poetry.extras]
 torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
