--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,13 @@ matplotlib = "^3.8.3"
 psutil = "^5.9.8"
 numpy = ">=1.20,<2.0"
 torch = {version = "^2.2.1", optional = true}
-pytorch-lightning = {version = "^1.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
 typer = "^0.12.3"
 tensorflow = {version = "2.16.1", optional = true}
 scikit-learn = {version = "^1.5.1", optional = true}
 datasets = "2.15.0"
+lightning = "^2.4.0"
 
 [tool.poetry.extras]
 torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
@@ -52,8 +52,8 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-line-length = 120
-exclude = ["p2pfl/communication/grpc/proto", "docs"]
+line-length = 140
+exclude = ["p2pfl/communication/protocols/grpc/proto", "docs"]
 
 [tool.ruff.lint]
 select = [
