--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "p2pfl"
-version = "0.3.0"
+version = "0.4.0"
 description = "A p2p federated learning framework"
 authors = ["Pedro Guijas <pguijas@gmail.com>"]
 license = "GPL-3.0-only"
@@ -20,15 +20,16 @@ numpy = ">=1.20,<2.0"
 torch = {version = "^2.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
+lightning = {version = "^2.4.0", optional = true}
 typer = "^0.12.3"
 tensorflow = {version = "2.16.1", optional = true}
-scikit-learn = {version = "^1.5.1", optional = true}
+keras = {version = "^3.5.0", optional = true}
+types-tensorflow = {version = "^2.17.0.20240820", optional = true}
 datasets = "2.15.0"
-lightning = "^2.4.0"
 
 [tool.poetry.extras]
-torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]
-tf = ["tensorflow", "scikit-learn"]
+torch = ["torch", "torchvision", "torchmetrics", "lightning"]
+tensorflow = ["tensorflow", "keras", "types-tensorflow"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
