--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,12 @@ torchmetrics = {version = "^1.3.1", optional = true}
 lightning = {version = "^2.4.0", optional = true}
 typer = "^0.12.3"
 ray = {extras = ["default"], version = "^2.35.0", optional = true}
-tensorflow = {version = "2.16.1", optional = true}
 keras = {version = "^3.5.0", optional = true}
 types-tensorflow = {version = "^2.17.0.20240820", optional = true}
 datasets = "2.15.0"
 
 pandas = "^2.2.3"
+tensorflow = "^2.18.0"
 [tool.poetry.extras]
 torch = ["torch", "torchvision", "torchmetrics", "lightning"]
 tensorflow = ["tensorflow", "keras", "types-tensorflow"]
