--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,10 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "poetry install --all-extras",
+	"postCreateCommand": [
+		"poetry lock --no-update",
+		"poetry install --all-extras"
+	],
 
 	// Configure tool-specific properties.
 	"customizations": {
