--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ flax = {version = "^0.10.0", optional = true}
 pandas = "^2.2.3"
 tqdm = "^4.67.0"
 types-tqdm = "^4.67.0.20241119"
+sphinx-design = "^0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
