--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          python -m poetry lock --no-update
+          python -m poetry lock
           python -m poetry install --all-extras
 
       - name: Generate documentation
