--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ tqdm = "^4.67.0"
 types-tqdm = "^4.67.0.20241119"
 sphinx-design = "^0.6.1"
 protobuf = ">=5.29.1"
+pyyaml = "^6.0.2"
+types-pyyaml = "^6.0.12.20241230"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -110,4 +112,4 @@ module = "torchvision.*"
 ignore_missing_imports = true
 
 [tool.poetry.scripts]
-p2pfl = "p2pfl.cli:app"
+p2pfl = "p2pfl.management.cli:app"
