--- a/p2pfl/examples/mnist/mnist.yaml
+++ b/p2pfl/examples/mnist/mnist.yaml
@@ -8,10 +8,10 @@ web_logger:
 
 # Defines network setup
 network:
-  package: "p2pfl.communication.protocols.protobuff.grpc"
-  protocol: "GrpcCommunicationProtocol"
-  nodes: 4
-  topology: "line"   # Network topology: "line", "ring", "star", "full", null for custom
+  package: "p2pfl.communication.protocols.protobuff.memory"
+  protocol: "MemoryCommunicationProtocol"
+  nodes: 10
+  topology: "star"   # Network topology: "line", "ring", "star", "full", null for custom
   additional_connections:
     - [0, 2]              # Connect node 0 to Node 2 (indices)
     - [1, 3]              # Connect node 1 to Node 3 (indices)
@@ -22,17 +22,19 @@ experiment:
   rounds: 4
   epochs: 1
   trainset_size: 4
-  seed: 42
+  seed: 666
 
   # Dataset settings
   dataset:
     source: "huggingface" # Dataset source: "huggingface", "csv", etc.
     name: "p2pfl/MNIST"
+    batch_size: 128
     partitioning:
       package: "p2pfl.learning.dataset.partition_strategies"
       strategy: "RandomIIDPartitionStrategy" # DirichletPartitionStrategy
-      reduced_dataset: true  # For testing purposes
-      reduction_factor: 50   # Dataset size will be n*50
+      reduced_dataset: false  # For testing purposes
+      reduction_factor: 10
+
       params: # Partitioning parameters (strategy-specific)
         # Dirichlet example
         alpha: 0.1 
@@ -41,7 +43,7 @@ experiment:
 
   # Learning algorithm configuration
   model:
-    package: "p2pfl.examples.mnist.model.mlp_pytorch"
+    package: "p2pfl.examples.mnist.model.mlp_pytorch" # mlp_pytorch | mlp_tensorflow
     model_build_fn: "model_build_fn"
     params: {}  # Learning algorithm parameters (algorithm-specific)
 
@@ -61,9 +63,10 @@ experiment:
 # General experiment settings
 settings:
   general:
-    log_level: "DEBUG" # Logging verbosity: "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"
-    exclude_beat_logs: true
-    grpc_timeout: 0.5
+    log_level: "INFO" # Logging verbosity: "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"
+    grpc_timeout: 2
+    disable_ray: False
+
   SSL:
     use_ssl: false
     CA_CRT: None
@@ -75,6 +78,7 @@ settings:
     period: 2
     timeout: 10
     wait_convergence: 4
+    exclude_beat_logs: true
   gossip:
     period: 1
     ttl: 10
@@ -82,7 +86,7 @@ settings:
     amount_last_messages_saved: 1000
     models_period: 1
     models_per_round: 4
-    exit_on_x_equal_rounds: 10
+    exit_on_x_equal_rounds: 50
   training:
     vote_timeout: 60
     aggregation_timeout: 300
