--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,3 +60,9 @@ jobs:
         with:
           name: Coveragenator
           path: python-coverage-comment-action.txt
+
+      - name: Upload logs
+        uses: actions/upload-artifact@v4
+        with:
+          name: logs
+          path: logs
