--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ grpcio = "^1.62.0"
 grpcio-tools = "^1.62.0"
 matplotlib = "^3.8.3"
 psutil = "^5.9.8"
-numpy = "^2.0"
+numpy = ">=1.20,<2.0"
 torch = {version = "^2.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
 torchmetrics = {version = "^1.3.1", optional = true}
