--- a/p2pfl/examples/mnist/mnist.yaml
+++ b/p2pfl/examples/mnist/mnist.yaml
@@ -11,7 +11,7 @@ network:
   package: "p2pfl.communication.protocols.protobuff.memory"
   protocol: "MemoryCommunicationProtocol"
   nodes: 10
-  topology: "star"   # Network topology: "line", "ring", "star", "full", null for custom
+  topology: "full"   # Network topology: "line", "ring", "star", "full", null for custom
   additional_connections:
     - [0, 2]              # Connect node 0 to Node 2 (indices)
     - [1, 3]              # Connect node 1 to Node 3 (indices)
