--- a/p2pfl/examples/cifar10/cifar10.yaml
+++ b/p2pfl/examples/cifar10/cifar10.yaml
@@ -10,7 +10,7 @@ web_logger:
 network:
   package: "p2pfl.communication.protocols.protobuff.memory"
   protocol: "MemoryCommunicationProtocol"
-  nodes: 1
+  nodes: 4
   topology: "star"   # Network topology: "line", "ring", "star", "full", null for custom
   additional_connections:
   #  - [0, 2]              # Connect node 0 to Node 2 (indices)
@@ -33,7 +33,7 @@ experiment:
     # Use our custom CIFAR10 transform function (normalization only, no data augmentation)
     transforms:
       package: "p2pfl.examples.cifar10.transforms"
-      function: "get_cifar10_transform"
+      function: "get_cifar10_transforms"
       params: {}
     partitioning:
       package: "p2pfl.learning.dataset.partition_strategies"
@@ -89,8 +89,8 @@ settings:
     SERVER_KEY: None
     CLIENT_KEY: None
   heartbeat:
-    period: 2
-    timeout: 10
+    period: 10
+    timeout: 60
     wait_convergence: 4
     exclude_beat_logs: true
   gossip:
@@ -104,6 +104,7 @@ settings:
   training:
     vote_timeout: 60
     aggregation_timeout: 300
+    ray_actor_pool_size: 2
 
 # Profiling configuration
 profiling:
