--- a/p2pfl/examples/mnist/mnist.yaml
+++ b/p2pfl/examples/mnist/mnist.yaml
@@ -106,6 +106,7 @@ settings:
   training:
     vote_timeout: 60
     aggregation_timeout: 300
+    #ray_actor_pool_size: 1
 
 # Profiling configuration
 profiling:
