--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pandas = "^2.2.3"
 tqdm = "^4.67.0"
 protobuf = ">=5.29.1"
 pyyaml = "^6.0.2"
+wandb = "^0.19.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
