--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv lock
-          uv sync --all-extras --activate
+          uv sync --all-extras --active
 
       - name: Format (ruff)
         run: |
