--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,19 +33,16 @@ jobs:
 
       - name: Format (ruff)
         run: |
-          source .venv/bin/activate
-          ruff format p2pfl
+          uv run ruff format p2pfl
 
       - name: Lint (ruff)
         run: |
-          source .venv/bin/activate
-          ruff check p2pfl --output-format=github
+          uv run ruff check p2pfl --output-format=github
         continue-on-error: true
 
       - name: Type checks (mypy)
         run: |
-          source .venv/bin/activate
-          mypy -p p2pfl
+          uv run mypy -p p2pfl
 
       - name: Generate certificates
         run: |
