--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,9 @@ psutil = "^5.9.8"
 numpy = ">=1.20,<2.0"
 torch = {version = "^2.2.1", optional = true}
 torchvision = {version = "^0.17.1", optional = true}
-torchmetrics = {version = "^1.3.1", optional = true}
-lightning = {version = "^2.4.0", optional = true}
+torchmetrics = "^1.7.3"
+lightning = "^2.5.2"
+xgboost = "^3.0.2"
 typer = "^0.12.3"
 ray = "^2.43.0"
 tensorflow = {version = "^2.18.0", optional = true}
@@ -32,6 +33,7 @@ pandas = "^2.2.3"
 tqdm = "^4.67.0"
 protobuf = ">=5.29.1"
 pyyaml = "^6.0.2"
+scikit-learn = "^1.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
