--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "tqdm>=4.67.0,<5",
     "protobuf>=5.29.1",
     "pyyaml>=6.0.2,<7",
+    "click==8.1.8",
 ]
 
 [project.optional-dependencies]
