--- a/p2pfl/examples/cifar10/cifar10.yaml
+++ b/p2pfl/examples/cifar10/cifar10.yaml
@@ -1,10 +1,11 @@
 description: "Example of using P2PFL with the CIFAR-10 dataset, a collection of 32x32 color images in 10 classes."
 
-# Web logger configuration
-web_logger:
-  enabled: false
-  url: ""
-  token: ""
+# Remote loggers configuration (optional)
+remote_loggers:
+  # wandb_api_key: "your-api-key"
+  # wandb_project: "p2pfl-cifar10"
+  # p2pfl_web_url: "https://your-server.com"
+  # p2pfl_web_key: "your-api-key"
 
 # Defines network setup
 network:
