--- a/p2pfl/examples/mnist/mnist.yaml
+++ b/p2pfl/examples/mnist/mnist.yaml
@@ -1,10 +1,11 @@
 description: "Example of using P2PFL with the MNIST dataset, a collection of handwritten digits commonly used for training image processing systems."
 
-# Web logger configuration
-web_logger:
-  enabled: false
-  url: ""
-  token: ""
+# Remote loggers configuration (optional)
+remote_loggers:
+  # wandb_api_key: "your-api-key"
+  # wandb_project: "p2pfl-mnist"
+  # p2pfl_web_url: "https://your-server.com"
+  # p2pfl_web_key: "your-api-key"
 
 # Defines network setup
 network:
