--- a/p2pfl/examples/mnist/mnist.yaml
+++ b/p2pfl/examples/mnist/mnist.yaml
@@ -10,7 +10,7 @@ web_logger:
 network:
   package: "p2pfl.communication.protocols.protobuff.memory"
   protocol: "MemoryCommunicationProtocol"
-  nodes: 10
+  nodes: 8
   topology: "full"   # Network topology: "line", "ring", "star", "full", null for custom
   additional_connections:
     - [0, 2]              # Connect node 0 to Node 2 (indices)
@@ -36,15 +36,11 @@ experiment:
     #  function: "XX"
     partitioning:
       package: "p2pfl.learning.dataset.partition_strategies"
-      strategy: "RandomIIDPartitionStrategy" # DirichletPartitionStrategy
+      strategy: "RandomPartitionStrategy" 
       reduced_dataset: false  # For testing purposes
       reduction_factor: 10
 
-      params: # Partitioning parameters (strategy-specific)
-        # Dirichlet example
-        alpha: 0.1
-        min_partition_size: 5
-        self_balancing: false
+      params: {} # No parameters needed for random partitioning
 
   # Learning algorithm configuration
   model:
