--- a/p2pfl/examples/mnist/mnist.yaml
+++ b/p2pfl/examples/mnist/mnist.yaml
@@ -11,7 +11,7 @@ network:
   package: "p2pfl.communication.protocols.protobuff.memory"
   protocol: "MemoryCommunicationProtocol"
   nodes: 8
-  topology: "full"   # Network topology: "line", "ring", "star", "full", null for custom
+  topology: "ring"   # Network topology: "line", "ring", "star", "full", null for custom
   additional_connections:
     - [0, 2]              # Connect node 0 to Node 2 (indices)
     - [1, 3]              # Connect node 1 to Node 3 (indices)
@@ -36,7 +36,7 @@ experiment:
     #  function: "XX"
     partitioning:
       package: "p2pfl.learning.dataset.partition_strategies"
-      strategy: "RandomPartitionStrategy" 
+      strategy: "RandomIIDPartitionStrategy" 
       reduced_dataset: false  # For testing purposes
       reduction_factor: 10
 
