--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,10 +71,10 @@ dev = [
     "types-tqdm>=4.67.0.20241119,<5",
 ]
 docs = [
-    "Sphinx>=7.2.6,<8",
-    "myst-parser>=2.0.0,<3",
-    "furo>=2024.1.29,<2025",
-    "sphinx-autodoc-typehints>=2.2.3,<3",
+    "Sphinx>=8.0.0,<9",
+    "myst-parser>3",
+    "furo>=2025",
+    "sphinx-autodoc-typehints>=2.5.0,<3",
     "sphinxcontrib-mermaid>=0.9.2,<0.10",
     "sphinx-design>=0.6.1,<0.7",
 ]
